--- a/serverless.yml
+++ b/serverless.yml
@@ -28,7 +28,7 @@ functions:
     timeout: 30
     events:
       - s3:
-          bucket: bucketname # Escolha o nome do seu bucket que deve ser único
+          bucket: instagrao-images
           event: s3:ObjectCreated:*
           rules:
             - prefix: uploads/
@@ -43,7 +43,16 @@ functions:
           path: images/{s3objectkey}
           method: get
           cors: true
-
+  getImage:
+    handler: handler.getImage
+    description:
+    memorySize: 128
+    timeout: 30
+    events:
+      - http:
+          path: images/download/{s3objectkey}
+          method: get
+          cors: true
 resources:
   Resources:
     ImagesDynamoDbTable:
